Fix toast z-index after allow click link on footer on loading

--- a/client/src/components/Toasts/Toast.css
+++ b/client/src/components/Toasts/Toast.css
@@ -2,7 +2,7 @@
     position: fixed;
     right: 24px;
     bottom: 24px;
-    z-index: 10;
+    z-index: 103;
     width: 345px;
 }
 
